--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-selenium>=4.9.0
-pandas>=1.5.3
-webdriver-manager>=3.8.6
-openpyxl>=3.1.2 
+pandas>=2.0.0
+numpy>=1.24.0
+selenium>=4.0.0
+webdriver-manager>=4.0.0 
